--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@google/maps": "^0.4.5",
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
